--- a/src/styles/productList.css
+++ b/src/styles/productList.css
@@ -1,6 +1,7 @@
 section {
   width: 80%;
   margin: auto;
+
   margin-top: 5%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -22,8 +23,7 @@ section {
 }
 .products img {
   width: 100%;
-  height: 100%;
-  height: auto;
+  height: 300px;
   object-fit: cover;
 }
 .imageOnly {
@@ -51,7 +51,7 @@ section {
   background-color: #38a7f6;
 }
 
-@media (max-width: 812px) {
+@media ((max-width: 810px)) {
   section {
     width: 90%;
     margin-top: 10px;
@@ -79,6 +79,7 @@ section {
 
   .products {
     width: 100%;
+
     padding: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
